<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:contentDescription="@string/logo_kodepedia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputFullName"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:hint="@string/full_name"
                app:startIconContentDescription="icon person"
                app:startIconDrawable="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageLogo">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:inputType="textPersonName"
                    android:autofillHints="@string/full_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/textEmail"
                app:startIconContentDescription="icon email"
                app:startIconDrawable="@drawable/ic_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputFullName">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/textEmail"
                    android:inputType="text"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/textPassword"
                app:startIconContentDescription="icon password"
                app:startIconDrawable="@drawable/ic_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputEmail">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="@string/textPassword"
                    android:textColor="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputRetypePassword"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/retype_password"
                app:startIconContentDescription="icon password"
                app:startIconDrawable="@drawable/ic_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputPassword"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="@string/textPassword"
                    android:textColor="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                style="@style/AppTheme.ButtonFilled"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:text="@string/textRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputRetypePassword" />

            <TextView
                android:id="@+id/textNotRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/have_already_account"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                style="@style/AppTheme.ButtonOutline"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/textLogin"
                app:layout_constraintTop_toBottomOf="@id/textNotRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_24sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>