<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            app:elevation="0dp"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:text="@string/shipping_address" />

                <ImageButton
                    android:id="@+id/buttonBack"
                    android:layout_width="@dimen/_56sdp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/content_desc_back"
                    android:src="@drawable/ic_back_white" />

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:inputType="textMultiLine"
                android:padding="@dimen/_8sdp"
                android:gravity="top"
                android:hint="@string/input_your_shipping_address"
                android:autofillHints="@string/input_your_shipping_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textPembayaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/colorTextNormal"
                android:textStyle="bold"
                android:text="@string/pembayaran"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAddress"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPembayaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:layout_marginTop="@dimen/_8sdp"
                android:clipToPadding="false"
                android:paddingStart="@dimen/_16sdp"
                tools:listitem="@layout/item_pembayaran"
                app:layout_constraintTop_toBottomOf="@id/textPembayaran"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubmit"
                style="@style/AppTheme.ButtonFilled"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewPembayaran"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>