<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forget.ForgetPasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/ic_back_blue"
                    android:elevation="0dp" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:contentDescription="@string/logo_kodepedia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar" />

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextHint"
                android:layout_marginTop="@dimen/_56sdp"
                android:textSize="@dimen/_14ssp"
                android:text="@string/forgot_password2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageLogo" />

            <TextView
                android:id="@+id/textDescForgetPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"
                android:textColor="@color/colorTextDesc"
                android:text="@string/textDescForgetPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textForgotPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:hint="@string/textEmail"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconContentDescription="icon email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDescForgetPassword">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:inputType="text"
                    android:autofillHints="@string/textEmail" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSendPassword"
                style="@style/AppTheme.ButtonFilled"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:text="@string/send_password"
                app:layout_constraintTop_toBottomOf="@id/textInputEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>