<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.example.tugas5.model.Movie" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            app:elevation="0dp"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:text="@string/details_product" />

                <ImageButton
                    android:id="@+id/buttonBack"
                    android:layout_width="@dimen/_56sdp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/content_desc_back"
                    android:src="@drawable/ic_back_white" />

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    app:imageBackdrop="@{movie}"
                    android:id="@+id/imageBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="@dimen/_4sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_12sdp">

                        <TextView
                            android:text="@{movie.title}"
                            android:id="@+id/textTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/_16ssp"
                            tools:text="Naruot Shippuden"
                            />

                        <TextView
                            android:text="@{movie.releaseDate}"
                            android:id="@+id/textDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextNormal"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:textSize="@dimen/_12ssp"
                            tools:text="2019-7-01"
                            />

                        <TextView
                            android:text="@{movie.overview}"
                            android:id="@+id/textDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_24sdp"
                            android:lineSpacingMultiplier="1.4"
                            android:textColor="@color/colorTextDesc"
                            tools:text="@string/lorem"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonBuy"
                    style="@style/AppTheme.ButtonFilled"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_46sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:cornerRadius="@dimen/_8sdp"
                    android:text="@string/buy"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>